# novellia-takehome

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  readme.md  run-docker.sh
data/: backend-takehome-fhir-resources.jsonl  generated-fhir-resources.jsonl
docs/: api-overview.mermaid  data-ingest-and-store.mermaid  high-level-arch-overview.mermaid  novellia_takehome_API.postman_collection.json  openapi.yaml
src/: audit.rs  fhir.rs  handlers.rs  lib.rs  main.rs  route.rs  store.rs
src/api/: binary.rs  error.rs  mod.rs  patient.rs
src/api/patient/: document.rs  models.rs  timeline.rs
src/handlers/: error.rs  mod.rs  patient.rs
tests/: api.rs
tests/common/: mod.rs
