[package]
name = "novellia-takehome"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
anyhow = "1.0.102"
